--- a/TODO.txt
+++ b/TODO.txt
@@ -1,11 +1,11 @@
-*Mouse input. (Tyler)
-*Basic audio loading. (Tyler)
-*Basic collision detection. (Tyler)
-*Animation loader. (Daniel)
-*Lighting and shaders. (Daniel)
-*Scene manager. (Daniel)
-*Basic physics. (Tyler)
-*GUI. (Daniel)
-*3D audio. (Tyler)
-*Advanced physics. (Tyler)
-*Convert to Vulkan. (Daniel)
+Display.
+Simple rendering.
+Input.
+Shading.
+Physics.
+Advanced shading.
+Threading.
+Audio.
+Video.
+GUI.
+Networking.
